Fixed bug in using the leak